Fix onscreen keyboard spacing

--- a/common/gnome-shell/3.30/sass/_common.scss
+++ b/common/gnome-shell/3.30/sass/_common.scss
@@ -2141,6 +2141,11 @@ $legacy_icon_size: 24px;
   border-color: transparentize(black, 0.8);
 }
 
+.key-container {
+  padding: 4px;
+  spacing: 4px;
+}
+
 .keyboard-layout {
   spacing: 10px;
   padding: 10px;
