--- a/common/gnome-shell/3.32/sass/_common.scss
+++ b/common/gnome-shell/3.32/sass/_common.scss
@@ -2145,6 +2145,11 @@ $legacy_icon_size: 24px;
   }
 }
 
+.key-container {
+  padding: 4px;
+  spacing: 4px;
+}
+
 .keyboard-layout {
   spacing: 10px;
   padding: 10px;
